color contrast issues minor change

--- a/antora-ui-camel/src/css/base.css
+++ b/antora-ui-camel/src/css/base.css
@@ -80,6 +80,8 @@ button::-moz-focus-inner {
 
 mark {
   color: var(--color-camel-orange);
+  font-weight: bold;
+  background: var(--color-white);
 }
 
 .text-center {
